test/functions/deitz/test_bad_function.chpl
proc foo(i : int) {
  writeln(i);
}

foo(2.0);
